--- a/h.html
+++ b/h.html
@@ -159,7 +159,7 @@
         ，多途径地对学生实践动手能力、创新能力和个性化发展进行培养。</h3>
 </div>
 <div class="ele">
-    <div><a href="./主页.html">田军作</a></div>
+    <div><a href="./first.html">田军作</a></div>
     <div><a href="./h.html">韩鲁宁作</a></div>
     <div><a href="./s.html">孙家栋作</a></div>
     <div><a href="./j.html">姬冠宇作</a></div>
