--- a/s.html
+++ b/s.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="ele">
-        <div><a href="./主页.html">田军作</a></div>
+        <div><a href="./first.html">田军作</a></div>
         <div><a href="./h.html">韩鲁宁作</a></div>
         <div><a href="./s.html">孙家栋作</a></div>
         <div><a href="./j.html">姬冠宇作</a></div>
